fixed sidebar spacing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -104,3 +104,22 @@ input[type="search"]::-webkit-search-results-decoration {
   -webkit-appearance:none;
 }
 
+/* Tab content hide */
+.tab-content {
+    display: none;
+  }
+
+  /* Tab link styles */
+  .tab-link {
+    cursor: pointer;
+  }
+
+  /* Active tab styles */
+  .tab-link.active {
+    font-weight: bold;
+  }
+
+  .tab-content.active {
+    display: block;
+  }
+
